# cmake-template

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  main.cc
.cache/clangd/index/: multiply.cc.79A9795EB34B45E1.idx  multiply.h.3E6C0393681D9AAD.idx  multiply_test.cc.3964F97E51560102.idx
my_library/: CTestTestfile.cmake  Makefile  cmake_install.cmake
my_library/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  multiply.cc
my_library/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
